[tool.poetry]
name = "robottests"
version = "0.1.0"
description = ""
authors = ["Arto Ranta <arto.ranta@polku.io>"]

[tool.poetry.dependencies]
python = "^3.6"
robotframework = "^3.1.2"
RESTinstance = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
